RESOLVED FIXED164541
[WebRTC] [OpenWebRTC] RTX default parameters broken after r207952
https://bugs.webkit.org/show_bug.cgi?id=164541
Summary [WebRTC] [OpenWebRTC] RTX default parameters broken after r207952
Alejandro G. Castro
Reported 2016-11-09 04:54:11 PST
The refactor in bug #164015 added the parameters to the wrong payload, it is just a typo.
Attachments
Patch (1.59 KB, patch)
2016-11-09 04:59 PST, Alejandro G. Castro
no flags
Alejandro G. Castro
Comment 1 2016-11-09 04:59:34 PST
Philippe Normand
Comment 2 2016-11-09 05:56:20 PST
Comment on attachment 294229 [details] Patch Nice one!
WebKit Commit Bot
Comment 3 2016-11-10 01:04:26 PST
Comment on attachment 294229 [details] Patch Clearing flags on attachment: 294229 Committed r208530: <http://trac.webkit.org/changeset/208530>
WebKit Commit Bot
Comment 4 2016-11-10 01:04:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.