[WebRTC] [OpenWebRTC] RTX default parameters broken after r207952 https://bugs.webkit.org/show_bug.cgi?id=164541

Patch by Alejandro G. Castro <alex@igalia.com> on 2016-11-10
Reviewed by Philippe Normand.

Fixed typo in refactoring.

* platform/mediastream/openwebrtc/MediaEndpointOwr.cpp:
(WebCore::MediaEndpointOwr::getDefaultVideoPayloads):

Canonical link: https://commits.webkit.org/182255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208530 268f45cc-cd09-0410-ab3c-d52691b4dbfc